--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fast-csv": "^2.4.1",
     "geo-distance": "^0.1.2",
     "jsonfile": "^4.0.0",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.33",
     "puppeteer": "git+https://github.com/GoogleChrome/puppeteer.git",
     "scrape-it": "^4.1.0"
